<resources>
    <string name="app_name">Calculator Kenya</string>
    <string name="tax_year">Tax Year</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="pay_period">Pay Period</string>
    <string name="gross_salary">Gross Salary</string>
    <string name="insurance_relief">Insurance Relief</string>
    <string name="_0_00">00</string>
    <string name="amount">Amount</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="loan_start_date">Loan start date</string>
    <string name="title_activity_home">Calculator Kenya</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="monthly_payment">Monthly payment</string>
    <string name="calculate">Calculate</string>
    <string name="total_helb_loan">Total HELB loan</string>
    <string name="select_month">Select Month</string>
    <string name="currency_from">Currency From</string>
    <string name="currency_to">Currency To</string>
    <string name="vehicle_market_value">Vehicle Market Value</string>
    <string-array name="sp_months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="sp_tarrifs">
        <item>Domestic DC</item>
        <item>Small Commercial DC</item>
        <item>Commercial Cl1</item>
        <item>Commercial Cl2</item>
        <item>Commercial Cl3</item>
        <item>Commercial Cl4</item>
        <item>Commercial Cl5</item>

    </string-array>
    <string-array name="sp_meter">
        <item>&#189; inches</item>
        <item>&#190; inches</item>
        <item>1 inches</item>
        <item>1 &#189; inches</item>
        <item>2 inches</item>
        <item>3inches</item>
        <item>4 inches</item>
        <item>6 inches</item>
        <item>8 inches and above</item>
    </string-array>
    <string-array name="sp_tarrif">
        <item>Domestic/Residential</item>
        <item>Commercial/Industrial</item>
        <item>Government Institutions</item>
        <item>Government School</item>
        <item>Water Kiosks</item>
        <item>ATM Water dispenser</item>
        <item>Bulk water-Flats</item>
        <item>Pre-paid Meter</item>
        <item>Bulk Water - WSPs</item>
    </string-array>
    <string-array name="sp_locations">
        <item>Bomet</item>
        <item>Bondo</item>
        <item>Bungoma</item>
        <item>Busia</item>
        <item>Chuka</item>
        <item>Eldoret</item>
        <item>Embu</item>
        <item>Garissa</item>
        <item>Gilgil</item>
        <item>Homabay</item>
        <item>Isebania</item>
        <item>Isiolo</item>
        <item>Kabarnet</item>
        <item>Kajiado</item>
        <item>Kakamega</item>
        <item>Kapenguria</item>
        <item>Kapsabet</item>
        <item>Kericho</item>
        <item>Keroka</item>
        <item>Kerugoya</item>
        <item>Kiganjo</item>
        <item>Kilifi</item>
        <item>Kisii</item>
        <item>Kisumu</item>
        <item>Kitale</item>
        <item>Kitui</item>
        <item>Kwale</item>
        <item>Lamu</item>
        <item>Liboi</item>
        <item>Likoni</item>
        <item>Lokichogio</item>
        <item>Londiani</item>
        <item>Lungalunga</item>
        <item>Machakos</item>
        <item>Makuyu</item>
        <item>Malaba</item>
        <item>Malindi</item>
        <item>Mandera</item>
        <item>Maralal</item>
        <item>Marigat</item>
        <item>Marsabit</item>
        <item>Maua</item>
        <item>Meru</item>
        <item>Migori</item>
        <item>Mogotio</item>
        <item>Molo</item>
        <item>Mombasa</item>
        <item>Mtito Andei</item>
        <item>Muranga</item>
        <item>Mwingi</item>
        <item>Nairobi</item>
        <item>Naivasha</item>
        <item>Nakuru</item>
        <item>Namanga</item>
        <item>Nanyuki</item>
        <item>Narok</item>
        <item>Nkubu</item>
        <item>Nyahururu</item>
        <item>Nyamira</item>
        <item>Nyeri</item>
        <item>Oyugis</item>
        <item>Sagana</item>
        <item>Siaya</item>
        <item>Sondu</item>
        <item>Sotik</item>
        <item>Taveta</item>
        <item>Thika</item>
        <item>Voi</item>
        <item>Wajir</item>
        <item>Webuye</item>

    </string-array>
    <string-array name="sp_groups">
        <item> P1</item>
        <item> ATS IV</item>
        <item> GAT III</item>
        <item> GAT II</item>
        <item> GAT I</item>
        <item> Senior GAT</item>
        <item> Principal GAT II</item>
        <item> Principal GAT I</item>
        <item> Senior Principal</item>
        <item> Chief Principal</item>

    </string-array>
    <string-array name="currency">
        <item>US DOLLAR</item>
        <item>STG POUND</item>
        <item>EURO</item>
        <item>SA RAND</item>
        <item>KES / USHS</item>
        <item>KES / TSHS</item>
        <item>KES / RWF</item>
        <item>KES / BIF</item>
        <item>AE DIRHAM</item>
        <item>CAN $</item>
        <item>S FRANC</item>
        <item>JPY (100)</item>
        <item>SW KRONER</item>
        <item>NOR KRONER</item>
        <item>DAN KRONER</item>
        <item>IND RUPEE</item>
        <item>HONGKONG DOLLAR</item>
        <item>SINGAPORE DOLLAR</item>
        <item>SAUDI RIYAL</item>
        <item>CHINESE YUAN</item>
        <item>AUSTRALIAN $</item>
        <item>KENYAN SHILLING</item>
    </string-array>
    <string-array name="civil_groups">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>J</item>
        <item>H</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
    </string-array>


    <string-array name="bodies">
        <item>Select body type</item>
        <item>Saloon, Hatchback, Double Cabin, Van</item>
        <item>Pick Up, Single Cabin, Truck, Bus</item>
    </string-array>

    <string name="interstitial">ca-app-pub-7130350208213886/4619990220</string>
    <string name="ad_id_banner">ca-app-pub-7130350208213886/8440240767</string>

</resources>
